--- a/P4E6.ipynb
+++ b/P4E6.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdATkHUqaegQ3h2BKMdmXp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +38,7 @@
       "metadata": {
         "id": "xcjObWTBWLpv"
       },
-      "execution_count": 11,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -100,13 +99,13 @@
       "metadata": {
         "id": "5BFAexMVS7GG"
       },
-      "execution_count": 88,
+      "execution_count": 69,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "DICT_FPM = {i+1: p for i, p in enumerate([0.15, 0.20, 0.10, 0.35, 0.20])}\n",
+        "DICT_FPM = {i: p for i, p in enumerate([0.15, 0.20, 0.10, 0.35, 0.20])}\n",
         "SOPORTE = list(DICT_FPM.keys())\n",
         "print('funcion de probabilidad de masa: ',DICT_FPM)\n",
         "print('debe dar 1: ',sum(DICT_FPM.values()))"
@@ -116,15 +115,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "weebfkW_NbFc",
-        "outputId": "9d87d9dd-ddeb-4480-de9b-7f1932c898ac"
+        "outputId": "0211d431-9391-4f6c-fc83-bea12132d176"
       },
-      "execution_count": 79,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "funcion de probabilidad de masa:  {1: 0.15, 2: 0.2, 3: 0.1, 4: 0.35, 5: 0.2}\n",
+            "funcion de probabilidad de masa:  {0: 0.15, 1: 0.2, 2: 0.1, 3: 0.35, 4: 0.2}\n",
             "debe dar 1:  1.0\n"
           ]
         }
@@ -173,9 +172,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oEuV013GObXr",
-        "outputId": "07e31bf2-809d-42aa-f7fc-2fd72835eb15"
+        "outputId": "d47038f3-8d11-4c40-d807-1f2e9d45a880"
       },
-      "execution_count": 90,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,31 +182,31 @@
           "text": [
             "Sin ordenar:\n",
             "     Datos     Real  Estimación  Diferencia\n",
-            "      P(1) 0.150000    0.151530    0.001530\n",
-            "      P(2) 0.200000    0.200490    0.000490\n",
-            "      P(3) 0.100000    0.098900    0.001100\n",
-            "      P(4) 0.350000    0.350210    0.000210\n",
-            "      P(5) 0.200000    0.198870    0.001130\n",
-            " Esperanza 3.250000    3.244400    0.005600\n",
-            "  Varianza 1.887500    1.892569    0.005069\n",
-            "Desv. Est. 1.373863    1.375707    0.001843\n",
+            "      P(0) 0.150000     0.14790    0.002100\n",
+            "      P(1) 0.200000     0.19866    0.001340\n",
+            "      P(2) 0.100000     0.09995    0.000050\n",
+            "      P(3) 0.350000     0.35181    0.001810\n",
+            "      P(4) 0.200000     0.20168    0.001680\n",
+            " Esperanza 2.250000     2.26071    0.010710\n",
+            "  Varianza 1.887500     1.88082    0.006680\n",
+            "Desv. Est. 1.373863     1.37143    0.002433\n",
             "\n",
-            "Distancia total de variación: 0.002230\n",
-            "Tiempo promedio de ejecución: 1.1496690197236604e-06 segundos\n",
+            "Distancia total de variación: 0.003490\n",
+            "Tiempo promedio de ejecución: 1.41451272021186e-06 segundos\n",
             "\n",
             "Ordenando:\n",
             "     Datos     Real  Estimación  Diferencia\n",
-            "      P(1) 0.150000    0.151850    0.001850\n",
-            "      P(2) 0.200000    0.199770    0.000230\n",
-            "      P(3) 0.100000    0.098980    0.001020\n",
-            "      P(4) 0.350000    0.350650    0.000650\n",
-            "      P(5) 0.200000    0.198750    0.001250\n",
-            " Esperanza 3.250000    3.244680    0.005320\n",
-            "  Varianza 1.887500    1.892952    0.005452\n",
-            "Desv. Est. 1.373863    1.375846    0.001983\n",
+            "      P(0) 0.150000    0.149660    0.000340\n",
+            "      P(1) 0.200000    0.199880    0.000120\n",
+            "      P(2) 0.100000    0.098100    0.001900\n",
+            "      P(3) 0.350000    0.353080    0.003080\n",
+            "      P(4) 0.200000    0.199280    0.000720\n",
+            " Esperanza 2.250000    2.252440    0.002440\n",
+            "  Varianza 1.887500    1.884994    0.002506\n",
+            "Desv. Est. 1.373863    1.372951    0.000912\n",
             "\n",
-            "Distancia total de variación: 0.002500\n",
-            "Tiempo promedio de ejecución: 2.448607080887086e-06 segundos\n"
+            "Distancia total de variación: 0.003080\n",
+            "Tiempo promedio de ejecución: 1.315867899775185e-06 segundos\n"
           ]
         }
       ]
@@ -223,10 +222,6 @@
         "def crear_dict_fpm(soporte, p):\n",
         "  return {v: p(v) for v in soporte}\n",
         "\n",
-        "def adecuar_soporte(dict_fpm_objetivo, dict_fpm_modelo):\n",
-        "    soporte_modelo = dict_fpm_modelo.keys()\n",
-        "    return {nuevo_k: v for nuevo_k, v in zip(soporte_modelo, dict_fpm_objetivo.values())}\n",
-        "\n",
         "def fpm_binomial(k, n=N_BIN, p=P_BIN):\n",
         "    if not 0 <= k <= n:\n",
         "        return 0.0\n",
@@ -234,41 +229,27 @@
         "    prob = coef * (p ** k) * ((1 - p) ** (n - k))\n",
         "    return prob\n",
         "\n",
-        "_dict_fpm_binomial = crear_dict_fpm(list(range(N_BIN+1)), fpm_binomial)\n",
-        "dict_fpm_binomial = adecuar_soporte(_dict_fpm_binomial, DICT_FPM)\n",
+        "dict_fpm_binomial = crear_dict_fpm(list(range(N_BIN + 1)), fpm_binomial)\n",
+        "generador_de_muestras_binomial = lambda: TI(calcular_dict_fda(dict_fpm_binomial))\n",
         "\n",
-        "print('debe dar 1: ',sum(dict_fpm_binomial.values())) # da cerca por la precision flotante de python\n",
-        "print()\n",
-        "print(f'X~B({N_BIN},{P_BIN})')\n",
-        "for i in range(1,6):\n",
-        "  print(f'P(X={i}) = ', dict_fpm_binomial[i])\n",
-        "\n",
-        "print()\n",
-        "print('funcion de probabilidad de masa de p: ',DICT_FPM)"
+        "print(DICT_FPM)\n",
+        "print(dict_fpm_binomial)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GCNw52E75vBh",
-        "outputId": "d5443578-3703-4bbc-8231-e8efdf8ff6a3"
+        "outputId": "6633719a-72f8-4707-e8b5-30b3f631486c"
       },
-      "execution_count": 85,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "debe dar 1:  1.0000000000000002\n",
-            "\n",
-            "X~B(4,0.45)\n",
-            "P(X=1) =  0.09150625000000003\n",
-            "P(X=2) =  0.2994750000000001\n",
-            "P(X=3) =  0.3675375000000001\n",
-            "P(X=4) =  0.20047500000000004\n",
-            "P(X=5) =  0.04100625\n",
-            "\n",
-            "funcion de probabilidad de masa de p:  {1: 0.15, 2: 0.2, 3: 0.1, 4: 0.35, 5: 0.2}\n"
+            "{0: 0.15, 1: 0.2, 2: 0.1, 3: 0.35, 4: 0.2}\n",
+            "{0: 0.09150625000000003, 1: 0.2994750000000001, 2: 0.3675375000000001, 3: 0.20047500000000004, 4: 0.04100625}\n"
           ]
         }
       ]
@@ -276,30 +257,25 @@
     {
       "cell_type": "code",
       "source": [
-        "# Método de rechazo con una uniforme discreta, buscando la cota c más baja posible\n",
-        "# con las probabilidades dadas.\n",
+        "C_posibles = [DICT_FPM[i] / dict_fpm_binomial[i] for i in range(0,len(DICT_FPM))]\n",
+        "C = max(C_posibles)\n",
         "\n",
-        "C_posibles = [DICT_FPM[i] / dict_fpm_binomial[i] for i in range(1,6)]\n",
-        "C = min(C_posibles)\n",
-        "\n",
-        "print(C_posibles)\n",
-        "print('C = ',C)"
+        "print(f'C = max({C_posibles}) =',C)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YpE4XtefEON5",
-        "outputId": "1d8fd30c-4602-46fe-8ee7-0dc8a98cd7c7"
+        "outputId": "6c7c0be7-ec2e-41c9-d5f0-df6fc0bf3d32"
       },
-      "execution_count": 86,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1.6392322928761691, 0.6678353785791801, 0.2720810801618882, 1.745853597705449, 4.877305288827923]\n",
-            "C =  0.2720810801618882\n"
+            "C = max([1.6392322928761691, 0.6678353785791801, 0.2720810801618882, 1.745853597705449, 4.877305288827923]) = 4.877305288827923\n"
           ]
         }
       ]
@@ -307,59 +283,41 @@
     {
       "cell_type": "code",
       "source": [
-        "def AyR(p, q, c=C):\n",
-        "  \"\"\"\n",
-        "  Método de aceptación-rechazo para generar muestras de la distribución `p` usando una distribución propuesta `q` y una constante `c`.\n",
-        "\n",
-        "  Parámetros:\n",
-        "  p (list/dict): Distribución de probabilidad, donde `p[y]` es la probabilidad asociada a un valor `y`.\n",
-        "  q (function): Función que genera un valor aleatorio `y` según la distribución propuesta.\n",
-        "  c (float): Constante de escala que ajusta la relación entre `p` y `q`.\n",
-        "\n",
-        "  Devuelve:\n",
-        "  int: Un valor `y` del soporte de `p` basado en la probabilidad ajustada por `q` y `c`.\n",
-        "  \"\"\"\n",
+        "def generador_de_muestras_AyR_bin():\n",
         "  while True:\n",
-        "    u = random.random()\n",
-        "    y = q()\n",
+        "    y = generador_de_muestras_binomial()\n",
         "    qy = dict_fpm_binomial[y]\n",
-        "    py = p[y]\n",
-        "    if u < py/(qy*c):\n",
+        "    py = DICT_FPM[y]\n",
+        "    if random.random() < py/(qy*C):\n",
         "      return y\n",
         "\n",
-        "def q():\n",
-        "  u = random.random()\n",
-        "  indice_random = int(u*len(SOPORTE))\n",
-        "  return SOPORTE[indice_random]\n",
-        "\n",
-        "generador_de_muestras = lambda: AyR(DICT_FPM, q)\n",
-        "calificar_generador_de_muestras(generador_de_muestras, DICT_FPM)"
+        "calificar_generador_de_muestras(generador_de_muestras_AyR_bin, DICT_FPM)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t23hnNsz-kh5",
-        "outputId": "03086aaf-8ac5-4f02-ce08-553367645227"
+        "outputId": "4cfc46a5-2051-4435-dd56-9f657b0b1018"
       },
-      "execution_count": 93,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "     Datos     Real  Estimación  Diferencia\n",
-            "      P(1) 0.150000    0.197990    0.047990\n",
-            "      P(2) 0.200000    0.199850    0.000150\n",
-            "      P(3) 0.100000    0.199790    0.099790\n",
-            "      P(4) 0.350000    0.199240    0.150760\n",
-            "      P(5) 0.200000    0.203130    0.003130\n",
-            " Esperanza 3.250000    3.009670    0.240330\n",
-            "  Varianza 1.887500    2.003476    0.115976\n",
-            "Desv. Est. 1.373863    1.415442    0.041579\n",
+            "      P(0) 0.150000    0.149780    0.000220\n",
+            "      P(1) 0.200000    0.198850    0.001150\n",
+            "      P(2) 0.100000    0.101030    0.001030\n",
+            "      P(3) 0.350000    0.349970    0.000030\n",
+            "      P(4) 0.200000    0.200370    0.000370\n",
+            " Esperanza 2.250000    2.252300    0.002300\n",
+            "  Varianza 1.887500    1.885765    0.001735\n",
+            "Desv. Est. 1.373863    1.373231    0.000632\n",
             "\n",
-            "Distancia total de variación: 0.150910\n",
-            "Tiempo promedio de ejecución: 1.0611686494303285e-06 segundos\n"
+            "Distancia total de variación: 0.001400\n",
+            "Tiempo promedio de ejecución: 6.71051957038344e-06 segundos\n"
           ]
         }
       ]
