--- a/Parcial_2_2024_05_16.ipynb
+++ b/Parcial_2_2024_05_16.ipynb
@@ -320,28 +320,19 @@
         "plt.title(f'Distribución Poisson')\n",
         "plt.xlabel('k (Número de eventos)')\n",
         "plt.ylabel('P(N(T) = K)')\n",
-        "plt.legend()"
+        "plt.legend()\n",
+        "plt.show()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 472
         },
         "id": "xfm9Lpd1J7Ye",
-        "outputId": "835fdd0d-55dc-4bcf-e6a4-1614fde2c32b"
+        "outputId": "bcdeeeb7-e222-4bed-f3d8-d4ce26623739"
       },
-      "execution_count": 67,
+      "execution_count": 76,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.legend.Legend at 0x78d975201290>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 67
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -358,7 +349,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNig4Nyd3v8bBKkqpctIQes",
+      "authorship_tag": "ABX9TyOEq5JTztIk+gyYU8mD5w9/",
       "include_colab_link": true
     },
     "kernelspec": {
