--- a/P6E6ipynb.ipynb
+++ b/P6E6ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCY/4+GDRa7uR9iQHTRU/X",
+      "authorship_tag": "ABX9TyPLg86ox9F9y7cAWrluAdXZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,9 +74,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dj6Uosek5e0B",
-        "outputId": "9bcf3a89-c033-4ba1-bce0-4662030cd878"
+        "outputId": "1360a2a8-5a06-4be1-9d8b-a321ae4e45a3"
       },
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,9 +129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDaPvcPI9-H9",
-        "outputId": "7e9cf29e-f9b9-4aee-c72a-6ec4b9a716b7"
+        "outputId": "06d54bc9-19b3-4b11-a383-c4f50fa35aa6"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,6 +143,222 @@
             "IC =       (3.103797, 3.203783)\n",
             "long. IC = 0.099985\n",
             "pi:        3.141593\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## curiosidad: pi pertenecera al intervalo el 95% de las veces?"
+      ],
+      "metadata": {
+        "id": "zRKnbT_suxff"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def proporcion_pi_en_interv(n, confianza = 0.95, long_interv = 0.1):\n",
+        "  seed(1)\n",
+        "\n",
+        "  alpha = 1 - confianza\n",
+        "  z_alpha_2 = abs(stats.norm.ppf(alpha/2))\n",
+        "\n",
+        "  pi_en_interv = 0\n",
+        "  iter, media, Scuad, intervalo = 0, 0, 0, (0, 0)\n",
+        "  for _ in range(n):\n",
+        "    i, m, s2, interv = estimar_media_muestral_con_IC(long_interv, z_alpha_2)\n",
+        "    iter += i\n",
+        "    media += m\n",
+        "    Scuad += s2\n",
+        "    intervalo = (intervalo[0] + interv[0], intervalo[1] + interv[1])\n",
+        "    pi_en_interv += interv[0] <= np.pi <= interv[1]\n",
+        "\n",
+        "  print(f\"Experimento confianza {confianza * 100}% Y long. IC {long_interv}\")\n",
+        "  print(f\"Proporcion de veces en la que pi esta en el IC: {pi_en_interv/n:.6f}\")\n",
+        "  print(\"Resultados promedio:\")\n",
+        "  print(f\"n =        {iter/n}\")\n",
+        "  print(f\"media =    {media/n:.6f}\")\n",
+        "  print(f\"Scuad =    {Scuad/n:.6f}\")\n",
+        "  print(f\"IC =       ({intervalo[0]/n:.6f}, {intervalo[1]/n:.6f})\")\n"
+      ],
+      "metadata": {
+        "id": "4qa3PREgu64b"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "proporcion_pi_en_interv(1_000, confianza = 0.60, long_interv = 0.1)"
+      ],
+      "metadata": {
+        "id": "grot17-i4Z_F",
+        "outputId": "94519345-9715-4896-f28d-4f8e34b885ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experimento confianza 60.0% Y long. IC 0.1\n",
+            "Proporcion de veces en la que pi esta en el IC: 0.000000\n",
+            "Resultados promedio:\n",
+            "n =        797.0\n",
+            "media =    3.091593\n",
+            "Scuad =    2.811952\n",
+            "IC =       (3.041603, 3.141584)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "proporcion_pi_en_interv(1_000, confianza = 0.65, long_interv = 0.1)"
+      ],
+      "metadata": {
+        "id": "OKF0poHe4hzi",
+        "outputId": "8e474d8d-c5e6-46b5-86eb-40bcfac11ac8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experimento confianza 65.0% Y long. IC 0.1\n",
+            "Proporcion de veces en la que pi esta en el IC: 1.000000\n",
+            "Resultados promedio:\n",
+            "n =        970.0\n",
+            "media =    3.109278\n",
+            "Scuad =    2.772360\n",
+            "IC =       (3.059314, 3.159243)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "proporcion_pi_en_interv(1_000, confianza = 0.70, long_interv = 0.1)"
+      ],
+      "metadata": {
+        "id": "SDSddbLt4dVU",
+        "outputId": "fe629bc1-50f7-46ef-825d-231ba944343e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experimento confianza 70.0% Y long. IC 0.1\n",
+            "Proporcion de veces en la que pi esta en el IC: 1.000000\n",
+            "Resultados promedio:\n",
+            "n =        1164.0\n",
+            "media =    3.137457\n",
+            "Scuad =    2.708518\n",
+            "IC =       (3.087462, 3.187453)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "proporcion_pi_en_interv(1_000, confianza = 0.80, long_interv = 0.1)"
+      ],
+      "metadata": {
+        "id": "P8o6Sffh4OyK",
+        "outputId": "c52b0068-859b-46d9-9b05-55997c0840f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experimento confianza 80.0% Y long. IC 0.1\n",
+            "Proporcion de veces en la que pi esta en el IC: 1.000000\n",
+            "Resultados promedio:\n",
+            "n =        1782.0\n",
+            "media =    3.135802\n",
+            "Scuad =    2.711474\n",
+            "IC =       (3.085812, 3.185793)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "proporcion_pi_en_interv(1_000, confianza = 0.90, long_interv = 0.1)"
+      ],
+      "metadata": {
+        "id": "r_2crHVe4R9M",
+        "outputId": "66492208-7a8d-41a5-ac75-6bf955d11b4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experimento confianza 90.0% Y long. IC 0.1\n",
+            "Proporcion de veces en la que pi esta en el IC: 1.000000\n",
+            "Resultados promedio:\n",
+            "n =        2907.0\n",
+            "media =    3.146887\n",
+            "Scuad =    2.685574\n",
+            "IC =       (3.096892, 3.196881)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "proporcion_pi_en_interv(1_000, confianza = 0.95, long_interv = 0.1)"
+      ],
+      "metadata": {
+        "id": "XfaZ9pLbwR09",
+        "outputId": "9715feea-992b-4cbf-a32b-8ab39acf670c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experimento confianza 95.0% Y long. IC 0.1\n",
+            "Proporcion de veces en la que pi esta en el IC: 1.000000\n",
+            "Resultados promedio:\n",
+            "n =        4103.0\n",
+            "media =    3.153790\n",
+            "Scuad =    2.669419\n",
+            "IC =       (3.103797, 3.203783)\n"
           ]
         }
       ]
