--- a/P7E9_exponencial_sinlambda_KS.ipynb
+++ b/P7E9_exponencial_sinlambda_KS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6SqB5xO5C8V7VfynIUw6A",
+      "authorship_tag": "ABX9TyPfJLjhl70xA1BsnUCTsl8r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,6 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "\n",
         "N_SIM = 100_000\n",
         "MUESTRA_EMPIRICA = [1.6, 10.3, 3.5, 13.5, 18.4, 7.7, 24.3, 10.7, 8.4, 4.9, 7.9, 12, 16.2, 6.8, 14.7]\n",
         "TAM_MUESTRA = len(MUESTRA_EMPIRICA)\n",
@@ -69,7 +68,7 @@
         "    return 1 - exp(-l*x)\n",
         "\n",
         "def F_muestreador(n, l=ESTIMADOR_L):\n",
-        "    return [-log(1 - random())/l]\n",
+        "    return [-log(1 - random())/l for _ in range(n)]\n",
         "\n",
         "def estadistico_KS(muestra, F_fda):\n",
         "    tamano_muestra = len(muestra)\n",
@@ -89,17 +88,12 @@
         "    d_empirico = estadistico_KS(muestra_empirica, F_fda)\n",
         "    cuenta = 0\n",
         "    for _ in range(N_SIM):\n",
-        "\n",
         "        # F_muestra = F_muestreador(tamano_muestra)\n",
         "        # d_simulado = estadistico_KS(F_muestra, F_fda)\n",
-        "\n",
         "        U_muestra = [random() for _ in range(tamano_muestra)]\n",
         "        d_simulado = estadistico_KS(U_muestra, lambda x: x)\n",
-        "\n",
-        "        if d_empirico <= d_simulado:\n",
-        "            cuenta += 1\n",
+        "        cuenta += d_empirico <= d_simulado\n",
         "    return cuenta / N_SIM\n",
-        "\n",
         "\n",
         "seed(1)\n",
         "p_valor = estimar_Pvalor_KS(MUESTRA_EMPIRICA)\n",
@@ -128,9 +122,9 @@
           "height": 526
         },
         "id": "n4LgvLd2j0hu",
-        "outputId": "515e5473-4df9-47b9-a7ff-fe8d927e11e9"
+        "outputId": "1033607e-68e7-4664-e08c-d65bf1fddbe5"
       },
-      "execution_count": 52,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +151,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "def estimar_Pvalor_KS_exaustivo(muestra_empirica):\n",
+        "def estimar_Pvalor_KS_exaustivo(muestra_empirica, F_fda):\n",
         "    tamano_muestra = len(muestra_empirica)\n",
         "    d_empirico = estadistico_KS(muestra_empirica, F_fda)\n",
         "    cuenta = 0\n",
@@ -166,20 +160,13 @@
         "        l_simulada = estimador_l(F_muestra)\n",
         "        F_fda_simulada = lambda x : F_fda(x, l_simulada)\n",
         "        d_simulado = estadistico_KS(F_muestra, F_fda_simulada)\n",
-        "\n",
-        "        # U_muestra = [random() for _ in range(tamano_muestra)]\n",
-        "        # d_simulado = estadistico_KS(U_muestra, lambda x: x)\n",
-        "\n",
-        "        if d_empirico <= d_simulado:\n",
-        "            cuenta += 1\n",
+        "        cuenta += d_empirico <= d_simulado\n",
         "    return cuenta / N_SIM\n",
         "\n",
         "seed(1)\n",
-        "p_valor = estimar_Pvalor_KS(MUESTRA_EMPIRICA)\n",
+        "p_valor = estimar_Pvalor_KS_exaustivo(MUESTRA_EMPIRICA, F_fda)\n",
         "d_estadistico = estadistico_KS(MUESTRA_EMPIRICA, F_fda)\n",
-        "\n",
         "d_correcto, p_valor_correcto = kstest(MUESTRA_EMPIRICA, cdf=F_fda)\n",
-        "\n",
         "\n",
         "print(f\"{'D manual':>9} | {'p manual':>9} | {'D scipy':>9} | {'p scipy':>9}\")\n",
         "print(\"-\" * 50)\n",
@@ -201,9 +188,9 @@
           "height": 526
         },
         "id": "26daE0mjnz4l",
-        "outputId": "98c36bd6-2741-4da0-8190-29baa3bd5f44"
+        "outputId": "abae6b21-5d4d-47b7-fe81-bac25a77d9b2"
       },
-      "execution_count": 50,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +198,7 @@
           "text": [
             " D manual |  p manual |   D scipy |   p scipy\n",
             "--------------------------------------------------\n",
-            "   0.2695 |    0.1882 |    0.2695 |    0.1880\n"
+            "   0.2695 |    0.0487 |    0.2695 |    0.1880\n"
           ]
         },
         {
