--- a/P7E10_normal_sinmuysigma_KS.ipynb
+++ b/P7E10_normal_sinmuysigma_KS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+dbgu15KBC+UPPH1EAjZR",
+      "authorship_tag": "ABX9TyNRGddyzozXihTuVYjQqZL/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,33 +86,25 @@
         "\n",
         "    return D_max\n",
         "\n",
-        "def estimar_Pvalor_KS(muestra_empirica):\n",
+        "def estimar_Pvalor_KS(muestra_empirica, F_fda):\n",
         "    tamano_muestra = len(muestra_empirica)\n",
         "    d_empirico = estadistico_KS(muestra_empirica, F_fda)\n",
         "    cuenta = 0\n",
         "    for _ in range(N_SIM):\n",
-        "\n",
         "        # F_muestra = F_muestreador(tamano_muestra)\n",
         "        # d_simulado = estadistico_KS(F_muestra, F_fda)\n",
-        "\n",
         "        U_muestra = [random() for _ in range(tamano_muestra)]\n",
         "        d_simulado = estadistico_KS(U_muestra, lambda x: x)\n",
-        "\n",
-        "        if d_empirico <= d_simulado:\n",
-        "            cuenta += 1\n",
+        "        cuenta += d_empirico <= d_simulado\n",
         "    return cuenta / N_SIM\n",
         "\n",
-        "\n",
         "seed(1)\n",
-        "p_valor = estimar_Pvalor_KS(MUESTRA_EMPIRICA)\n",
+        "p_valor = estimar_Pvalor_KS(MUESTRA_EMPIRICA, F_fda)\n",
         "d_estadistico = estadistico_KS(MUESTRA_EMPIRICA, F_fda)\n",
-        "\n",
         "d_correcto, p_valor_correcto = kstest(MUESTRA_EMPIRICA, cdf=F_fda)\n",
-        "\n",
         "\n",
         "print(f\"{'D manual':>9} | {'p manual':>9} | {'D scipy':>9} | {'p scipy':>9}\")\n",
         "print(\"-\" * 50)\n",
-        "\n",
         "print(f\"{d_estadistico:9.4f} | {p_valor:9.4f} | {d_correcto:9.4f} | {p_valor_correcto:9.4f}\")\n",
         "dom = linspace(min(MUESTRA_EMPIRICA), max(MUESTRA_EMPIRICA), num=TAM_MUESTRA)\n",
         "sns.lineplot(x=dom, y=F_fda(dom), label=\"FDA F\", color=\"red\")\n",
@@ -130,9 +122,9 @@
           "height": 526
         },
         "id": "n4LgvLd2j0hu",
-        "outputId": "1232ea19-cdf1-4a13-fcf3-3b5187faee91"
+        "outputId": "e79ec2c6-44c8-42da-943d-0c389140a048"
       },
-      "execution_count": 59,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +151,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "def estimar_Pvalor_KS_exaustivo(muestra_empirica):\n",
+        "def estimar_Pvalor_KS_exaustivo(muestra_empirica, F_fda):\n",
         "    tamano_muestra = len(muestra_empirica)\n",
         "    d_empirico = estadistico_KS(muestra_empirica, F_fda)\n",
         "    cuenta = 0\n",
@@ -168,20 +160,13 @@
         "        mu_sim, sigma_sim = estimadores_mu_sigma(F_muestra)\n",
         "        F_fda_simulada = lambda x : F_fda(x, mu_sim, sigma_sim)\n",
         "        d_simulado = estadistico_KS(F_muestra, F_fda_simulada)\n",
-        "\n",
-        "        # U_muestra = [random() for _ in range(tamano_muestra)]\n",
-        "        # d_simulado = estadistico_KS(U_muestra, lambda x: x)\n",
-        "\n",
-        "        if d_empirico <= d_simulado:\n",
-        "            cuenta += 1\n",
+        "        cuenta += d_empirico <= d_simulado\n",
         "    return cuenta / N_SIM\n",
         "\n",
         "seed(1)\n",
-        "p_valor = estimar_Pvalor_KS(MUESTRA_EMPIRICA)\n",
+        "p_valor = estimar_Pvalor_KS_exaustivo(MUESTRA_EMPIRICA, F_fda)\n",
         "d_estadistico = estadistico_KS(MUESTRA_EMPIRICA, F_fda)\n",
-        "\n",
         "d_correcto, p_valor_correcto = kstest(MUESTRA_EMPIRICA, cdf=F_fda)\n",
-        "\n",
         "\n",
         "print(f\"{'D manual':>9} | {'p manual':>9} | {'D scipy':>9} | {'p scipy':>9}\")\n",
         "print(\"-\" * 50)\n",
@@ -203,9 +188,9 @@
           "height": 526
         },
         "id": "26daE0mjnz4l",
-        "outputId": "d27d12fa-6603-4b62-a766-1131c038e7dc"
+        "outputId": "c1e8b214-584b-4372-b0d7-ccc2b3d49b1f"
       },
-      "execution_count": 60,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +198,7 @@
           "text": [
             " D manual |  p manual |   D scipy |   p scipy\n",
             "--------------------------------------------------\n",
-            "   0.1964 |    0.6736 |    0.1964 |    0.6747\n"
+            "   0.1964 |    0.2245 |    0.1964 |    0.6747\n"
           ]
         },
         {
