--- a/Utilidades_P3.ipynb
+++ b/Utilidades_P3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHlehZyQhzD/fY71x5r2G2",
+      "authorship_tag": "ABX9TyOrjoW/GA3sGx/ihJjVw4u2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "class Dist:\n",
         "    def __init__(self, ...): ...\n",
         "    def fda(self, x): return ...\n",
-        "    def variable_aleatoria(self) return ...\n",
+        "    def simular(self) return ...\n",
         "    def muestrear(self, n): return [variable_aleatoria() for _ in range(n)]\n",
         "```"
       ],
@@ -69,10 +69,25 @@
       "source": [
         "\n",
         "class DistExponencial:\n",
-        "    def __init__(l): self.l = l\n",
+        "    def __init__(self, l): self.l = l\n",
         "    def fda(self, x): return 1 - np.exp(-self.l * x)\n",
-        "    def variable_aleatoria(): return -np.log(1 - random()) / self.l\n",
-        "    def muestrear(self, n): return [variable_aleatoria for _ in range(n)]"
+        "    def simular(self): return -log(1 - random()) / self.l\n",
+        "    def muestrear(self, n): return [self.simular() for _ in range(n)]\n",
+        "\n",
+        "class DistTStudent:\n",
+        "    def __init__(self, df): self.df = df\n",
+        "    def simular(self): return gauss(0,1)/sqrt(2*gammavariate(0.5*self.df,2)/self.df)\n",
+        "    def muestrear(self, n): return [self.simular() for _ in range(n)]\n",
+        "\n",
+        "class DistNormal:\n",
+        "    def __init__(self, mu=0, sigma=1): self.mu, self.sigma = mu, sigma\n",
+        "    def fda(x): return erf(x/sqrt(2))/2 + 0.5\n",
+        "    def simular(self):\n",
+        "        while True:\n",
+        "            y1, y2 = -log(1 - random()), -log(1 - random())\n",
+        "            if y2 >= (y1 - 1)**2 / 2:\n",
+        "                return (1 if random() < 0.5 else -1) * y1 * self.sigma + self.mu\n",
+        "    def muestrear(self, n): return [self.simular() for _ in range(n)]"
       ],
       "metadata": {
         "id": "3LuhPxeMHN28"
